style(expanding-cards): update transition to fix on mobile

--- a/5050/expanding-cards/style2.css
+++ b/5050/expanding-cards/style2.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-html {
-
-}
-
 body { 
     font-family: 'Muli', sans-serif;
     display: flex;
@@ -37,7 +33,7 @@ body {
     flex: 0.5;
     margin: 10px;
     position: relative;
-    transition: flex 0.7s ease-in;
+    transition: all 0.7s ease-in;
 }
 
 .panel h3 {
